--- a/src/harmonic_motion/index.html
+++ b/src/harmonic_motion/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sketch</title>
 
-  <title>Sketch</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
 
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="../libraries/p5.min.js"></script>
+    <script src="../libraries/p5.sound.min.js"></script>
+    <script src="../libraries/js-colormaps/js-colormaps.js"></script>
+  </head>
 
-  <script src="../libraries/p5.min.js"></script>
-  <script src="../libraries/p5.sound.min.js"></script>
-  <script src="../libraries/js-colormaps/js-colormaps.js"></script>
-</head>
-
-<body>
-  <script src="sketch.js"></script>
-</body>
-
+  <body>
+    <script src="cube_sketch.js"></script>
+  </body>
 </html>
